fix(dimmer): completely vanish simple dimmer if parent is not dimmed (a possible loader inside was still visible)

--- a/src/definitions/modules/dimmer.less
+++ b/src/definitions/modules/dimmer.less
@@ -235,7 +235,7 @@ body.dimmable > .dimmer {
 .ui.simple.dimmer {
   display: block;
   overflow: hidden;
-  opacity: 1;
+  opacity: 0;
   width: 0;
   height: 0;
   z-index: -100;
